# multiboot2

./: .editorconfig  .gitmodules  .travis.yml  .typos.toml  CHANGELOG.md  Cargo.toml  Changelog.md  README.md  flake.nix  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: _build-rust.yml  dependabot-auto-merge.yml  integrationtest.yml  qa.yml  rust.yml
examples/: parse_mb2_header_runtime.rs  parse_mb2_header_static.rs  parse_mbi_from_dump.rs
integration-test/: .gitignore  README.md  run.sh  shell.nix
integration-test/bins/: Cargo.toml  README.md  rust-toolchain.toml  x86-unknown-none.json
integration-test/bins/.cargo/: config.toml
integration-test/bins/multiboot2_chainloader/: Cargo.toml  build.rs  link.ld
integration-test/bins/multiboot2_chainloader/src/: loader.rs  main.rs  multiboot.rs  multiboot2_header.S  start.S
integration-test/bins/multiboot2_payload/: Cargo.toml  build.rs  link.ld
integration-test/bins/multiboot2_payload/src/: main.rs  multiboot2_header.S  start.S
integration-test/bins/multiboot2_payload/src/verify/: bootloader.rs  chainloader.rs  grub.rs  limine.rs  mod.rs
integration-test/bins/util/: Cargo.toml
integration-test/bins/util/src/: allocator.rs  debugcon.rs  lib.rs  macros.rs
integration-test/nix/: sources.json
integration-test/tests/: .gitignore  README.md
integration-test/tests/01-boot-payload/: limine.cfg
integration-test/tests/02-boot-loader-and-chainload/: limine.cfg
integration-test/tests/multiboot2/: .gitignore  README.md  build_img.sh  grub.cfg  run_qemu.sh
integration-test/tests/multiboot2-header/: README.md  run_qemu.sh
multiboot2/: CHANGELOG.md  Cargo.toml  Changelog.md  README.md
multiboot2-common/: CHANGELOG.md  Cargo.toml  Changelog.md  README.md  architecture.drawio.xml  overview-multiboot2-structures.drawio.xml  parsing-flow-specific.drawio.xml
multiboot2-common/src/: boxed.rs  bytes_ref.rs  iter.rs  lib.rs  tag.rs  test_utils.rs
multiboot2-header/: CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE-MIT  README.md
multiboot2-header/examples/: minimal.rs
multiboot2-header/src/: address.rs  builder.rs  console.rs  end.rs  entry_address.rs  entry_efi_32.rs  entry_efi_64.rs  entry_header.rs  framebuffer.rs  header.rs  information_request.rs  lib.rs  module_align.rs  module_alignment.rs  relocatable.rs  tags.rs  test_utils.rs  uefi_bs.rs
multiboot2-header/src/builder/: header.rs  information_request.rs  mod.rs  traits.rs
multiboot2-header/src/header/: builder.rs  mod.rs
multiboot2/src/: apm.rs  boot_information.rs  boot_loader_name.rs  bootdev.rs  builder.rs  command_line.rs  efi.rs  elf_sections.rs  end.rs  framebuffer.rs  header.rs  image_load_addr.rs  lib.rs  memory_map.rs  module.rs  network.rs  rsdp.rs  smbios.rs  tag.rs  tag_trait.rs  tag_type.rs  test_util.rs  util.rs  vbe_info.rs
multiboot2/src/builder/: boxed_dst.rs  information.rs  mod.rs  traits.rs
nix/: sources.json
src/: boot_loader_name.rs  command_line.rs  efi.rs  elf_sections.rs  framebuffer.rs  header.rs  lib.rs  memory_map.rs  module.rs  rsdp.rs  vbe_info.rs
src/header/: address.rs  console.rs  end.rs  entry_efi_32.rs  entry_efi_64.rs  entry_header.rs  framebuffer.rs  information_request.rs  mod.rs  module_alignment.rs  relocatable.rs  tags.rs  uefi_bs.rs
src/header/mb2_header/: builder.rs  mod.rs
src/mbi/: elf_sections.rs  framebuffer.rs  memory_map.rs  mod.rs  module.rs  rsdp.rs  tags.rs  vbe_info.rs
src/tags/: header.rs  mbi.rs  mod.rs
