[package]
name = "multiboot2-header"
description = """
Convenient and safe parsing of Multiboot2 Header structures and the
contained header tags. Usable in no_std environments, such as a
bootloader. An optional builder feature also allows the construction of
the corresponding structures.
"""
version = "0.5.1"
authors = [
    "Philipp Schuster <phip1611@gmail.com>"
]
license = "MIT/Apache-2.0"
edition = "2021"
categories = [
    "no-std",
    "no-std::no-alloc",
    "parsing",
]
keywords = [
    "Multiboot2",
    "kernel",
    "boot",
    "bootloader",
]
# without this, sometimes crates.io doesn't show the preview of the README
# I expeciended this multiple times in the past
readme = "README.md"
homepage = "https://github.com/rust-osdev/multiboot2-header"
repository = "https://github.com/rust-osdev/multiboot2"
documentation = "https://docs.rs/multiboot2-header"
rust-version = "1.70"

[[example]]
name = "minimal"
required-features = ["builder"]

[features]
default = ["builder"]
alloc = []
builder = ["alloc"]
# Nightly-only features, which will eventually be stabilized.
unstable = []

[dependencies]
derive_more.workspace = true
log.workspace = true
multiboot2-common.workspace = true
multiboot2.workspace = true
ptr_meta.workspace = true

[package.metadata.docs.rs]
all-features = true
