[package]
name = "multiboot2-header"
description = """
Convenient and safe parsing of Multiboot2 Header structures and the
contained header tags. Usable in no_std environments, such as a
bootloader. An optional builder feature also allows the construction of
the corresponding structures.
"""
version = "0.7.0"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]
categories = [
  "no-std",
  "no-std::no-alloc",
  "parsing",
]
keywords = [
  "Multiboot2",
  "kernel",
  "boot",
  "bootloader",
]
# without this, sometimes crates.io doesn't show the preview of the README
# I expeciended this multiple times in the past
readme = "README.md"
homepage = "https://github.com/rust-osdev/multiboot2/tree/main/multiboot2-header"
repository = "https://github.com/rust-osdev/multiboot2"
documentation = "https://docs.rs/multiboot2-header"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[example]]
name = "minimal"
required-features = ["builder"]

[features]
default = ["builder"]
alloc = ["multiboot2-common/alloc"]
builder = ["alloc", "multiboot2-common/builder"]

[dependencies]
log.workspace = true
multiboot2-common.workspace = true
multiboot2.workspace = true
ptr_meta.workspace = true
thiserror.workspace = true

[package.metadata.docs.rs]
all-features = true
