[package]
name = "multiboot2"
description = """
Library that assists parsing the Multiboot2 Information Structure (MBI) from
Multiboot2-compliant bootloaders, such as GRUB. It supports all tags from the
specification including full support for the sections of ELF files. This library
is `no_std` and can be used in a Multiboot2-kernel.
"""
version = "0.20.2"
authors = [
    "Philipp Oppermann <dev@phil-opp.com>",
    "Calvin Lee <cyrus296@gmail.com>",
    "Isaac Woods",
    "Philipp Schuster <phip1611@gmail.com>"
]
license = "MIT/Apache-2.0"
edition = "2021"
categories = [
    "no-std",
    "parsing",
]
keywords = [
    "Multiboot2",
    "kernel",
    "boot",
    "bootloader",
]
# without this, sometimes crates.io doesn't show the preview of the README
# I expeciended this multiple times in the past
readme = "README.md"
homepage = "https://github.com/rust-osdev/multiboot2"
repository = "https://github.com/rust-osdev/multiboot2"
documentation = "https://docs.rs/multiboot2"
rust-version = "1.75"

[features]
default = ["builder"]
alloc = []
builder = ["alloc"]
# Nightly-only features, which will eventually be stabilized.
unstable = []

[dependencies]
bitflags.workspace = true
derive_more.workspace = true
log.workspace = true

# We only use a very basic type definition from this crate. To prevent MSRV
# bumps from uefi-raw, I restrict this here. Upstream users are likely to have
# two versions of this library in it, which is no problem, as we only use the
# type definition.
uefi-raw = { version = "~0.5", default-features = false }
ptr_meta = { version = "~0.2", default-features = false }

[package.metadata.docs.rs]
all-features = true
