[package]
name = "multiboot2"
description = """
Convenient and safe parsing of Multiboot2 Boot Information (MBI)
structures and the contained information tags. Usable in `no_std` environments,
such as a kernel. An optional builder feature also allows the construction of
the corresponding structures.
"""
version = "0.22.2"
authors = [
    "Philipp Oppermann <dev@phil-opp.com>",
    "Calvin Lee <cyrus296@gmail.com>",
    "Isaac Woods",
    "Philipp Schuster <phip1611@gmail.com>"
]
license = "MIT/Apache-2.0"
edition = "2021"
categories = [
    "no-std",
    "no-std::no-alloc",
    "parsing",
]
keywords = [
    "Multiboot2",
    "kernel",
    "boot",
    "bootloader",
]
# without this, sometimes crates.io doesn't show the preview of the README
# I expeciended this multiple times in the past
readme = "README.md"
homepage = "https://github.com/rust-osdev/multiboot2"
repository = "https://github.com/rust-osdev/multiboot2"
documentation = "https://docs.rs/multiboot2"
rust-version = "1.75"

[features]
default = ["builder"]
alloc = ["multiboot2-common/alloc"]
builder = ["alloc", "multiboot2-common/builder"]
# Nightly-only features, which will eventually be stabilized.
unstable = ["multiboot2-common/unstable"]

[dependencies]
bitflags.workspace = true
derive_more.workspace = true
log.workspace = true
ptr_meta.workspace = true
multiboot2-common.workspace = true
# We only use a very basic type definition from this crate. To prevent MSRV
# bumps from uefi-raw, I restrict this here. Upstream users are likely to have
# two versions of this library in it, which is no problem, as we only use the
# type definition.
uefi-raw = { version = "~0.7", default-features = false }

[package.metadata.docs.rs]
all-features = true
