[package]
name = "multiboot2_chainloader"
description = """
Integrationtest: Multiboot2 chainloader. The loader itself loads via Multiboot1,
but the payload is loaded via Multiboot2 by the loader.
"""
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []

[dependencies]
anyhow = { workspace = true }
elf_rs = { workspace = true }
integration-test-util = { workspace = true }
log = { workspace = true }
multiboot = { workspace = true }
multiboot2 = { workspace = true, features = ["builder"] }
multiboot2-header = { workspace = true }
