[package]
name = "multiboot2_payload"
description = "Multiboot2 integration test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
multiboot2 = { path = "../../../multiboot2", features = ["builder", "unstable"] }
util = { path = "../util" }
anyhow = { version = "1.0.69", default-features = false }
good_memory_allocator = "0.1.7"
log = { version = "0.4.17", default-features = false }
x86 = "0.52.0"
