[package]
name = "multiboot2_payload"
description = "Integrationtest: Multiboot2 payload"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
log.workspace = true
good_memory_allocator.workspace = true
multiboot2.workspace = true
util.workspace = true
x86 = "0.52"
