[package]
name = "multiboot2_payload"
description = "Integrationtest: Multiboot2 payload"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
integration-test-util = { workspace = true }
log = { workspace = true }
multiboot2 = { workspace = true }
